binrw/tests/ui/invalid_keyword_enum_variant.stderr
error: expected one of: `stream`, `big`, `little`, `is_big`, `is_little`, `map`, `try_map`, `repr`, `map_stream`, `magic`, `import`, `import_raw`, `assert`, `pre_assert`, `bound`
 --> tests/ui/invalid_keyword_enum_variant.rs:5:10
  |
5 |     #[br(invalid_enum_variant_keyword)]
  |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
